<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluee"
    android:orientation="vertical"
    tools:context="com.recoded.musicplayer.Songs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/HomeImage"
                android:src="@drawable/home" />

            <Button
                android:id="@+id/home"
                style="@style/homeButton"
                android:text="@string/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/albumImage"
                android:src="@drawable/album1" />

            <Button
                android:id="@+id/albums"
                style="@style/albumButton"
                android:text="@string/albums" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/SongImage"
                android:src="@drawable/songs" />

            <Button
                android:id="@+id/songs"
                style="@style/songButton"
                android:onClick="songs"
                android:text="songs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/paymentImage"
                android:src="@drawable/payment" />

            <Button
                android:id="@+id/payment"
                style="@style/paymentButton"
                android:text="@string/payment" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#000000"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Songs Activity"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textsongs"
            android:text="@string/midea_store_n_this_lay_out_contant_all_songs_of_all_albums" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/songs"
                android:src="@drawable/songss" />

            <TextView
                style="@style/songstext1"
                android:text="song1" />

            <ImageView
                style="@style/playbuttonsongs"
                android:src="@drawable/play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/songs"
                android:src="@drawable/songss" />

            <TextView
                style="@style/song2"
                android:text="@string/song2" />

            <ImageView
                style="@style/playbuttonsongs"
                android:src="@drawable/play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/songs"
                android:src="@drawable/songss" />

            <TextView
                style="@style/song3"
                android:text="@string/song3" />

            <ImageView
                style="@style/playbuttonsongs"
                android:src="@drawable/play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/songs"
                android:src="@drawable/songss" />

            <TextView
                style="@style/song4"
                android:text="@string/song4" />

            <ImageView
                style="@style/playbuttonsongs"
                android:src="@drawable/play" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
